# CAT-Surface

./: .codespellrc  .gitignore  AUTHORS  Agents.md  CAT_3dVol2Surf.c  CAT_AngularDistortion.c  CAT_ApplyWarpSPH.c  CAT_ApplyWarpSurf.c  CAT_ApplyWarpValues.c  CAT_AreaDistortion.c  CAT_ArealSmoothing.c  CAT_Artifacts.c  CAT_AverageSurfaces.c  CAT_Blur2d.c  CAT_Blur2d.h  CAT_BlurSurfHK.c  CAT_Color2Surf.c  CAT_Complexity.c  CAT_Complexity.h  CAT_Curvature.c  CAT_Curvature.h  CAT_Defect.c  CAT_Defect.h  CAT_Deform.h  CAT_DeformPolygons.c  CAT_DeformPolygons.h  CAT_DeformPrototypes.h  CAT_DeformSurf.c  CAT_DeformSurf_ui  CAT_Dfs2Obj.c  CAT_DistortCorrect.c  CAT_DumpConvexity.c  CAT_DumpCurv.c  CAT_DumpCurvL4FS  CAT_DumpCurvL4FS_ui  CAT_DumpCurv_ui  CAT_DumpGI.c  CAT_DumpGI_ui  CAT_DumpSurfArea.c  CAT_DumpSurfaceRatio.c  (+120 more)
.github/workflows/: binaries.yml  ci.yml  codespell.yml  publish-pypi.yml  python-wheels.yml
Include/: CAT_Amap.h  CAT_AverageSurf.h  CAT_AverageValues.h  CAT_BBReg.h  CAT_Bmap.h  CAT_Complexity.h  CAT_ConvexHull.h  CAT_CorrectThicknessFolding.h  CAT_Curvature.h  CAT_Defect.h  CAT_Deform.h  CAT_DeformPolygons.h  CAT_DepthPotential.h  CAT_FixTopology.h  CAT_Gyrification.h  CAT_Interpolate.h  CAT_Intersect.h  CAT_Isometrics.h  CAT_Kmeans.h  CAT_LayerSmooth.h  CAT_Map.h  CAT_MarchingCubes.h  CAT_Math.h  CAT_MeshClean.h  CAT_NiftiIO.h  CAT_NiftiLib.h  CAT_Nlm.h  CAT_Octree.h  CAT_Ornlm.h  CAT_Patch.h  CAT_Pinv.h  CAT_ROIStats.h  CAT_Refine.h  CAT_Resample.h  CAT_SPH.h  CAT_SafeAlloc.h  CAT_Separate.h  CAT_Smooth.h  CAT_Surf.h  CAT_SurfAverage.h  (+16 more)
Lib/: CAT_Amap.c  CAT_AverageSurf.c  CAT_AverageValues.c  CAT_BBReg.c  CAT_Bmap.c  CAT_Complexity.c  CAT_ConvexHull.c  CAT_CorrectThicknessFolding.c  CAT_Curvature.c  CAT_Defect.c  CAT_Deform.c  CAT_DeformPolygons.c  CAT_DepthPotential.c  CAT_Euler.c  CAT_Gyrification.c  CAT_Hessian.c  CAT_Interpolate.c  CAT_Intersect.c  CAT_Intersect_pthreads.c  CAT_Isometrics.c  CAT_Kmeans.c  CAT_LaplaceBeltrami.c  CAT_LayerSmooth.c  CAT_Map.c  CAT_MarchingCubes.c  CAT_Math.c  CAT_MeshClean.cpp  CAT_NiftiIO.c  CAT_NiftiLib.c  CAT_Octree.c  CAT_Ornlm.c  CAT_Patch.c  CAT_Pinv.c  CAT_ROIStats.c  CAT_Refine.c  CAT_Resample.c  CAT_SPH.c  CAT_SafeAlloc.c  CAT_Sanlm.c  CAT_SelfIntersect.c  (+18 more)
MarchingCubes/: MarchingCubes.c  genus0.c
Matlab/: cg_F2x_curv_txt.m  cg_cov_curv_txt.m  cg_get_aparc_data.m  cg_glm_curv_txt.m  cg_icc_curv_txt.m  cg_invert_values_curv_txt.m  cg_mgh2abs.m  cg_read_curv_txt.m  cg_t2x_curv_txt.m  cg_write_curv_txt.m  create_mean_image_of_each_twinpair_cg.m  load_mgh.m  read_curv.m  save_mgh.m  write_curv.m
Progs/: CAT_3dVol2Surf.c  CAT_3dVol2Surf_multi.c  CAT_AddValuesToSurf.c  CAT_AngularDistortion.c  CAT_ApplyWarpSPH.c  CAT_ApplyWarpSurf.c  CAT_ApplyWarpValues.c  CAT_AreaDistortion.c  CAT_ArealSmoothing.c  CAT_Artifacts.c  CAT_AverageSurfaces.c  CAT_BlurSurfHK.c  CAT_Central2Pial.c  CAT_Color2Surf.c  CAT_DeformMesh.c  CAT_DeformSurf.c  CAT_DeformSurf_ui  CAT_DumpConvexity.c  CAT_DumpCurv.c  CAT_DumpCurvL4FS  CAT_DumpCurvL4FS_ui  CAT_DumpCurv_ui  CAT_DumpDepthPotential.c  CAT_DumpGI.c  CAT_DumpGI_ui  CAT_DumpGyrificationIndex.c  CAT_DumpSurfArea.c  CAT_DumpSurfArea_ui  CAT_DumpSurfaceRatio.c  CAT_FixSelfIntersect.c  CAT_FixTopology.c  CAT_FractalDimension.c  CAT_FractalDimensionFS_ui  CAT_FractalDimension_ui  CAT_FractalSurface.c  CAT_FreesurferCurv2Txt.c  CAT_GIPhantom.c  CAT_GaussCurvSmoothing.c  CAT_GlmEstimate.c  CAT_GlmMath.c  (+102 more)
cat_surface_cython/: README.md  examples.py  pyproject.toml  setup.py  test_cython.py
cat_surface_cython/cat_surf/: __init__.py  _bbreg.c  _bbreg.pyx  _bic_types.pxd  _cat_funcs.pxd  _convert.c  _convert.pxd  _convert.pyx  _dartel.pxd  _io.c  _io.pyx  _nifti_types.pxd  _spherical_demon.c  _spherical_demon.pyx  _surf.c  _surf.pyx  _surf_warp.c  _surf_warp.pyx  _vol.c  _vol.pyx  _vol2surf.c  _vol2surf.pyx  _volume.c  _volume.pxd  _volume.pyx  _warp_demons.pxd
cat_surface_cython/cat_surf/cli/: __init__.py
cat_surface_cython/cat_surface/: __init__.py  bicpl_defs.pxd  surface_io.c  surface_io.pxd  surface_io.pyx
cat_surface_cython/examples/t1prep_port/: README.md
cat_surface_cython/known_issues/: README.md  smoke_test_repro.py
cat_surface_python/: IMPLEMENTATION.md  README.md  examples.py  setup.py  test_wrapper.py
cat_surface_python/cat_surface/: __init__.py  surface.py  volume.py
conda-recipe/: build.sh  meta.yaml
dartel/: dartel.h  diffeopoly.c  diffeosphere.c  optimizersphere.c  optimizersphere.h
deprecated/: CAT_Color2Surf.c  CAT_DeformPolygons.c  CAT_DeformPolygons.h  CAT_DeformSurf.c  CAT_DeformSurf_ui  CAT_Euler.c  CAT_FixSelfIntersect.c  CAT_GIPhantom.c  CAT_GlmEstimate.c  CAT_MarchingCubesGenus0.c  CAT_MarchingCubesTopological.c  CAT_Pinv.c  CAT_SelfIntersect.c  CAT_Surf2Surf.c  CAT_VolMarchingCubes_orig.c  CAT_WarpSurfSPH.c  MarchingCubes.h  conjugate.h
deprecated/m4/: mni_cxx_have_koenig_lookup.m4  smr_OPTIONAL_LIB.m4  smr_WITH_BUILD_PATH.m4
deprecated/nl/: nl_iterative_solvers.c  nl_superlu.c  nl_superlu.h
docs/: Roadmap.md
gifticlib/: gifti_io.c  gifti_io.h
m4/: mni_REQUIRE_LIB.m4  smr_CGAL_MAKEFILE.m4  smr_REQUIRED_LIB.m4
nifti/: nifti1_local.h
niftilib/: nifti1_local.h
nl/: nl.h  nl_matrix.c  nl_matrix.h  nl_os.c  nl_preconditioners.c  nl_private.h
not_used_anymore/: CAT_LBConformalMap.c  CAT_LaplaceBeltrami.c  CAT_MarchingCubesSphere.c
not_used_anymore/nl/: nl_api.c  nl_blas.c  nl_blas.h  nl_context.c  nl_context.h  nl_iterative_solvers.h  nl_preconditioners.h
s2kit10/: cospmls.c
tests/: Makefile.am  math_subset.c  minunit.h  test_math.c
topologysimplification/: Face.cpp  Face.h  FastLoop.cpp  FastLoop.h  Loop.cpp  Loop.h  Makefile  PatchDisk.cpp  PatchDisk.h  Segment.cpp  Segment.h  Surface.cpp  Surface.h  SurfaceObj.cpp  SurfaceObj.h  Vertex.cpp  Vertex.h  utils.cpp  utils.h
zlib/: adler32.c  compress.c  crc32.c  deflate.c  deflate.h  gzio.c  minigzip.c  trees.c  uncompr.c  zconf.h  zutil.c  zutil.h
